[NFDIV-4801] Fix code smells related to stream.collect (#4438)
* Use stream.toList() directly

* Remove unused imports

* Make some lists mutable

* Make more lists mutable

* Use toList() directly in more places

* Make bulk case list mutable