@@ -28,7 +28,6 @@ import java.util.Deque;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import static java.util.stream.Collectors.toList;
 import static uk.gov.hmcts.divorce.systemupdate.event.SystemLinkWithBulkCase.SYSTEM_LINK_WITH_BULK_CASE;
 
 @Component
@@ -116,15 +115,16 @@ public class SystemCreateBulkCaseListTask implements Runnable {
         bulkActionCaseDetails.setData(BulkActionCaseData.builder()
             .bulkListCaseDetails(bulkListCaseDetails)
             .casesAcceptedToListForHearing(
-                bulkListCaseDetails.stream()
-                    .map(c ->
-                        ListValue.<CaseLink>builder()
-                            .id(String.valueOf(counter.getAndIncrement()))
-                            .value(c.getValue().getCaseReference())
-                            .build()
-                    )
-                    .collect(toList()))
-            .build());
+                new ArrayList<>(
+                    bulkListCaseDetails.stream()
+                        .map(c ->
+                            ListValue.<CaseLink>builder()
+                                .id(String.valueOf(counter.getAndIncrement()))
+                                .value(c.getValue().getCaseReference())
+                                .build()
+                        )
+                        .toList())
+            ).build());
 
         return ccdCreateService.createBulkCase(bulkActionCaseDetails, user, serviceAuth);
     }
